--- a/.github/workflows/az_container_webapp.yml
+++ b/.github/workflows/az_container_webapp.yml
@@ -45,7 +45,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to GitHub container registry
         uses: docker/login-action@v3
@@ -58,7 +58,7 @@ jobs:
         run: echo "REPO=${GITHUB_REPOSITORY,,}" >>${GITHUB_ENV}
 
       - name: Build and push container image to registry
-        uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
+        uses: docker/build-push-action@v5
         with:
           push: true
           tags: pycareth.azurecr.io/${{ env.REPO }}:${{ github.sha }}
