--- a/.github/workflows/az_container_webapp.yml
+++ b/.github/workflows/az_container_webapp.yml
@@ -83,4 +83,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'pycareth.azurecr.io/${{ env.REPO }}:${{ github.sha }}'
+          images: 'pycareth.azurecr.io/pycaret-insurance'
