--- a/.github/workflows/az_container_webapp.yml
+++ b/.github/workflows/az_container_webapp.yml
@@ -61,7 +61,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: pycareth.azurecr.io/pycaret-insurance
+          tags: pycareth.azurecr.io/pycaret-insurance:latest
           file: ./Dockerfile
 
   deploy:
@@ -83,4 +83,4 @@ jobs:
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          images: 'pycareth.azurecr.io/pycaret-insurance'
+          images: 'pycareth.azurecr.io/pycaret-insurance:latest'
